# ParticleSimulation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  UPDATES.md  config.json
inc/core/: particle.hpp  particle_group.hpp  particle_properties.hpp  program.hpp  simulation.hpp
inc/ds/: base_vector.hpp  grid.hpp  multi_vector.hpp  simple_grid.hpp  vector.hpp
inc/math/: misc.hpp  vector.hpp
inc/time/: clock.hpp
inc/ui/: button.hpp  label.hpp  ui.hpp  ui_manager.hpp
inc/utilities/: concepts.hpp  utils.hpp  weird_ass_shit.hpp
src/: main.cpp
src/core/: particle_group.cpp  program.cpp  simulation.cpp
src/time/: clock.cpp
src/ui/: button.cpp  ui.cpp  ui_manager.cpp
src/utilities/: utils.cpp
